# oauth

./: .gitignore  Cargo.toml
main_app/: Cargo.toml  schema.rs
main_app/src/: lib.rs  main.rs
main_app/src/entity/: accounts.rs  mod.rs  prelude.rs  users.rs
main_app/templates/: hello.html
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
