[package]
name = "oauth"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.16.0"
axum = "0.8.9"
dotenvy = "0.15.7"
rand = "0.10.1"
reqwest = { version = "0.13.4", features = ["query"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
url = "2"
