[package]
name = "oauth"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.16.0"
axum = "0.8.9"
base64 = "0.22.1"
diesel = "2.3.10"
diesel-async = { version = "0.9.2", features = ["postgres", "deadpool"] }
dotenvy = "0.15.7"
rand = "0.10.1"
reqwest = { version = "0.13.4", features = ["query", "json", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
url = "2"
sea-orm = { version = "2.0.0-rc.42", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid"] }
